--- a/data/units.yml
+++ b/data/units.yml
@@ -1,3 +1,10 @@
+# 
+# Unit configuration
+#
+
+# Base rates and information for items 
+# without any units attached.
+#
 base:
     # T1 Leather speed bonus, greater than 1 is an increase
     T1_leather_speed: 1.05
@@ -27,30 +34,34 @@ base:
 unit_info:
     # Percentage of damage increase for warrior unit.
     warrior_damage: 1.00
+
     # Percentage of damage increase for archer unit.
     archer_damage: 1.5
-#Buildable Units
+
 units:
- - id: 'u_spy'
-   name: "Spy"
-   class_name: 'com.avrgaming.civcraft.items.units.Spy'
-   require_tech: 'tech_nationalism'
-   require_struct:
-   require_upgrade:
-   cost: 10000.0
-   hammer_cost: 500.0
-   limit: 1
-   item_id: 381
-   item_data: 0
-#
- - id: 'u_settler'
-   name: "Settler"
-   class_name: 'com.avrgaming.civcraft.items.units.Settler'
-   require_tech:
-   require_struct:
-   require_upgrade:
-   cost: 20000.0
-   hammer_cost: 500.0
-   limit: 0
-   item_id: 330
-   item_data: 0
+
+  - id: 'u_spy'
+    name: "Spy"
+    class_name: 'com.avrgaming.civcraft.items.units.Spy'
+    require_tech: 'tech_nationalism'
+    require_struct:
+    require_upgrade:
+    cost: 5000.0
+    hammer_cost: 500.0
+    limit: 1
+    item_id: 381
+    item_data: 0
+    
+  - id: 'u_settler'
+    name: "Settler"
+    class_name: 'com.avrgaming.civcraft.items.units.Settler'
+    require_tech:
+    require_struct:
+    require_upgrade:
+    cost: 25000.0
+    hammer_cost: 500.0
+    limit: 0
+    item_id: 330
+    item_data: 0
+    
+
