--- a/data/structures.yml
+++ b/data/structures.yml
@@ -108,70 +108,15 @@ cottage_levels:
 temple:
     # rate which temple modifies total culture output
     culture_bonus: 0.15
-
     # range at which temple checks for sacrifies
-    range: 20.0
-
+    range: 24.0
     # timeout for sacrifices. How long do they have to kill all the things?(in seconds)
     sacrifice_timeout: 30
 
     sacrifices:
         - entities:
               - 'sheep'
-          reward: 50
-#=======================================================#
-#==================> Monument Levels <==================#
-#=======================================================#
-monument_levels:
-    - level: 1
-      culture: 2.0
-      amount: 2
-      count: 24
-#
-    - level: 2
-      culture: 4.0
-      amount: 3
-      count: 48
-#
-    - level: 3
-      culture: 6.0
-      amount: 4
-      count: 72
-#
-    - level: 4
-      culture: 8.0
-      amount: 5
-      count: 96
-#
-    - level: 5
-      culture: 10.0
-      amount: 7
-      count: 120
-#
-    - level: 6
-      culture: 12.0
-      amount: 8
-      count: 144
-#
-    - level: 7
-      culture: 14.0
-      amount: 9
-      count: 168
-#
-    - level: 8
-      culture: 16.0
-      amount: 10
-      count: 192
-#
-    - level: 9
-      culture: 18.0
-      amount: 12
-      count: 216
-#
-    - level: 10
-      culture: 18.0
-      amount: 14
-      count: 240
+          reward: 5
 #=======================================================#
 #====================> Mine Levels <====================#
 #=======================================================#
@@ -731,27 +676,24 @@ structures:
     template: temple
     template_y_shift: 0
     displayName: Temple
-    require_upgrade:
     require_tech: 'tech_priesthood'
-    effect_event: generate_culture:250
-    check_event: 
+    effect_event: temple_culture
     update_event: check_sacrifice 
-    onBuild_event:
     limit: 1
-    cost: 30000.0
+    cost: 35000.0
     upkeep: 2500.0
-    hammer_cost: 2000.0
-    points: 4700
-    max_hitpoints: 250
+    hammer_cost: 2500.0
+    points: 5000
+    max_hitpoints: 375
     components:
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'CULTURE'
-          value: '2.0'
+          value: '4.0'
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'HAPPINESS'
-          value: '5.0'
+          value: '3.5'
   
   - id: s_shipyard
     template: shipyard
